# morie

./: .clangd  .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  ACKNOWLEDGMENTS.md  AGENTS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.csv  Dockerfile  INSTALLATION.md  LICENSE  LICENSE-APACHE  LICENSING.md  LICENSING_ANALYSIS.md  README.md  RELEASE-CHECKLIST.md  ROADMAP.md  SCIENTIFIC_DISCOVERIES.md  SECURITY.md  TUTORIAL.md  VERSION_INVENTORY.csv  WHATS_NEW.md  bootstrap.sh  bricklayer.sh  install.sh  paper.bib  paper.md  pyproject.toml  rOpenSci-770-response.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  r-universe-config.md  r-universe.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-tag-on-merge.yml  build.yml  ci-numba-bench.yml  ci.yml  codeql.yml  docker-publish.yml  draft-pdf.yml  homebrew-bump.yml  installers.yml  multi-distro-test.yml  pages.yml  pypi-publish.yml  r-cmd-check.yml  r-coverage-and-lint.yml  release-debrpm.yml  version-drift.yml  wheels.yml
.serena/: project.yml
audit/: SUMMARY.md  core-drift.txt  coverage-baseline.csv  coverage-phase1.csv  example-status.csv  lint-baseline.csv  skip-inventory.txt
audit/dictionaries/: arsau_2020_2022_dictionary.json  arsau_2023_dictionary.json  arsau_2023_report.txt  tps_psdp_doc.txt
daemon/: LICENSE-NOTICE  morie_lsm.py
docs/: data-dictionary-audit.md  designexptr_coverage.md  r-port-roadmap.md  v0_3_0_tracker.md  v0_4_0_reviewer_report.md
docs/hadesllm-org-profile/: README.md  SECURITY.md
docs/source/: acknowledgments.rst  architecture.md  cli.rst  conf.py  contributing.rst  index.rst  install.rst
docs/source/_ext/: r_autodoc.py
docs/source/_extra/: bricklayer.ps1  install.sh  robots.txt
docs/source/_static/: clipboard-strip-comments.css  clipboard-strip-comments.js  sidebar-contrast.css  sidebar-toggle.css  sidebar-toggle.js
docs/source/_templates/: navigation.html  sourcelink.html
kernel-module/: Makefile  morie.c
libmorie/: _core.cpp  hawkes.cpp  hawkes.h  kernels.cpp  kernels.h  morie_core.hpp
packaging/: README.md  fpm-bundle.sh  fpm-deb.sh  fpm-rpm.sh
packaging/macos/: build-pkg.sh  distribution.xml  morie-console.command  welcome.txt
packaging/pyinstaller/: morie.spec  morie_launcher.py
packaging/windows/: morie-console.cmd  morie.iss
papers/: README.md
papers/hawkes-paper/: main.tex  refs.bib
papers/morie-empirical-paper/: main.tex  refs.bib
papers/morie-py-paper/: main.tex  refs.bib
papers/morie-r-paper/: main.tex  refs.bib
papers/mrm-formulations-paper/: main.tex  refs.bib
r-package/moirais/: CITATION  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cran-comments.md
r-package/morie/: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  NOTICE  README.md  _pkgdown.yml  cleanup  configure  configure.win  cran-comments.md
scripts/: bundle_fn.py  docker_security_scan.sh  docker_test.sh  export_otis_csv.R  fix_fn_warnings.py  scrape_siu_full.py  scrape_siu_under_80.py  version-bump.sh  version-inventory.sh
src/moirais/: Modelfile  Modelfile.8b  Modelfile.nemotron  __init__.py  _adaptive.py  _bioplot.py  _docs.py  _filters.py  _jit.py  _migration.py  _parity.py  _spatial_voting.py  _waveform.py  agent.py  bench.py  bootstrap_methods.py  bq.py  chat.py  cheatsheet.py  container.py  cpads.py  data.py  diagnostics.py  doctor.py  doob_trends.py  earth.py  ebac.py  editor.py  effect_sizes.py  emissions.py  engine.py  engine_bridge.py  engine_kernels.c  engine_kernels.h  entheo_dmt.py  envhealth.py  eval.py  eval_pipeline.py  export.py  fam.py  (+78 more)
src/morie/: Makefile  Modelfile  Modelfile.8b  Modelfile.nemotron  __init__.py  _adaptive.py  _armodel.py  _biomodel.py  _bioplot.py  _classify.py  _datapaths.py  _decompose.py  _det_rng.py  _detection.py  _docs.py  _jit.py  _license_check.py  _migration.py  _parity.py  _pdf_extract.py  _spatial_voting.py  _spectral.py  _update_check.py  _waveform.py  agent.py  animate.py  arsau_analyze.py  arsau_datasets.py  audit_variables.py  bench.py  bq.py  bricklayer.py  causal.py  chat.py  cheatsheet.py  container.py  cpads.py  data.py  dataset.py  dataset_dictionary.py  (+119 more)
templates/: first-paper.md
tests/: conftest.py  test_agent.py  test_armstrong_det_seed.py  test_cache_path.py  test_causal.py  test_causal_canonical.py  test_causal_modules.py  test_causal_new.py  test_causal_parity.py  test_chat.py  test_cheatsheet.py  test_check_datasets.py  test_cihi_ingest.py  test_core_extension.py  test_cpads.py  test_data.py  test_dataset.py  test_dataset_recommendation.py  test_distributions.py  test_dl_det_seed.py  test_doctor_fix.py  test_effects.py  test_effects_expanded.py  test_emissions.py  test_engine.py  test_engine_kernels.py  test_envhealth_canonical.py  test_eval_pipeline.py  test_fam.py  test_fn_golden.py  test_gguf_loader.py  test_ghosal_det_seed.py  test_hawkes_callback.py  test_hawkes_kernel.py  test_inspector.py  test_investigation.py  test_jit_kernels.py  test_kosorok_det_seed.py  test_kv_cache.py  test_llm.py  (+32 more)
tests/entheo/: test_analysis.py  test_data.py  test_preprocess.py
tests/fairness/: test_gan.py  test_integration.py  test_metrics.py  test_predpol.py  test_simulation.py  test_temporal.py  test_xai.py
tests/fn/: conftest.py  test_a2cv.py  test_aE_an.py  test_aalen.py  test_abbac.py  test_abblc.py  test_abcgp.py  test_abcmc.py  test_abcnnt.py  test_abcr.py  test_abcrej.py  test_abcsmc.py  test_abdpd.py  test_abdst.py  test_abdxn.py  test_abemf.py  test_abend.py  test_abfng.py  test_abhch.py  test_abind.py  test_abirr.py  test_ablad.py  test_ablgt.py  test_abmcr.py  test_abmld.py  test_abmsm.py  test_abndst.py  test_abod.py  test_abodr.py  test_abpah.py  test_abpcb.py  test_abpes.py  test_abpfc.py  test_abpln.py  test_abpmc.py  test_abpmf.py  test_abradn.py  test_abrf.py  test_abrtm.py  test_absbs.py  (+36350 more)
tests/parity/: test_det_rng.py  test_kosorok_parity.py  test_ml_foundations_parity.py
tools/: bundle-describe-files.R  refresh_inventories.py
(+145563 files in other folders)
